# karakeep-tts

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
docs/superpowers/plans/: 2026-05-30-karakeep-tts-openai-port.md
docs/superpowers/specs/: 2026-05-30-karakeep-tts-openai-port-design.md
karakeep_tts/: __init__.py  config.py  karakeep.py  main.py  overcast.py  pipeline.py  tts.py
tests/: test_chunking.py  test_config.py  test_karakeep.py  test_main.py  test_overcast.py  test_pipeline.py  test_tts_concat.py  test_tts_openai.py
